fix: Window content overflowing the window handler. AMDG

--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 50rem;
-    min-height: 25rem;
-    max-height: 30rem;
+    height: 30rem;
     background-color: var(--window-handler-color);
 }
 
@@ -72,9 +71,7 @@ body {
     position: relative;
     border-radius: var(--window-border-radius);
     background-color: var(--window-bg-color);
-    min-height: 25rem;
-    max-height: 30rem;
-
+    height: 30rem;
     overflow-y: auto;
     margin: var(--window-handler-lsize);
     padding: var(--window-content-margin);
